Update Activity2.java